--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-calendar-timeline",
+  "name": "unfucked-react-calendar-timeline",
   "version": "0.26.7",
   "description": "react calendar timeline",
   "main": "lib/index.js",
